--- a/MobileStore/Views/Account/Login.cshtml
+++ b/MobileStore/Views/Account/Login.cshtml
@@ -1,4 +1,7 @@
 ﻿@model MobileStore.ViewModels.LoginModel
+@{
+    ViewData["Title"] = "Вход";
+}
 <h2>Вход на сайт</h2>
 
 <a asp-action="Register" asp-controller="Account">Регистрация</a>
