--- a/MobileStore/Views/Account/Register.cshtml
+++ b/MobileStore/Views/Account/Register.cshtml
@@ -1,14 +1,16 @@
 ﻿@model MobileStore.ViewModels.RegisterModel
-
+@{
+    ViewData["Title"] = "Регистрация";
+}
 <h2>Регистрация</h2>
 
 <form method="post" asp-action="Register" asp-controller="Account" asp-anti-forgery="true">
     <div class="validation" asp-validation-summary="ModelOnly" />
     <div>
         <div>
-            <label asp-for="NameAndSurname">Введите фамилию и имя</label><br/>
-            <input type="text" asp-for="NameAndSurname"/>
-            <span asp-validation-for="NameAndSurname"/>
+            <label asp-for="NameAndSurname">Введите фамилию и имя</label><br />
+            <input type="text" asp-for="NameAndSurname" />
+            <span asp-validation-for="NameAndSurname" />
         </div>
         <div>
             <label asp-for="Email">Введите Email</label><br />
